  * Vmail no longer uses the QtMobility QML element. I cannot afford to use qtm 1.1 unless it is fully supported on the n900.